# agentic-fit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
agentic_fit/: actionability.py  agent.py  backends.py  budget.py  c3.py  cli.py  crosslab.py  crosslab_models.py  imports.py  loader.py  models.py  novelty.py  popularity.py  runner.py  sandbox.py  sandbox_runner.py  scoring.py  venvs.py
data/: pypi_downloads.json
docs/: FINDINGS.md
results/: README.md  c3_constrained_haiku.jsonl  c3_constrained_sonnet.jsonl  c3_unconstrained_haiku.jsonl  c3_unconstrained_sonnet.jsonl  crosslab_reps3_2026-05-25.jsonl  phase2_c1.jsonl  phase2_c1_haiku.jsonl
scripts/: build_site_data.py  crosslab_concordance.py  fetch_openrouter_models.py  smoke_openrouter.py
site/: app.js  data.json  index.html  style.css
tasks/cli_parsing/: task.yaml  test_solution.py
tasks/data_validation/: task.yaml  test_solution.py
tasks/data_validation_hard/: task.yaml  test_solution.py
tasks/date_handling/: task.yaml  test_solution.py
tasks/http_client/: task.yaml  test_solution.py
tasks/retrying/: task.yaml  test_solution.py
tests/: test_actionability.py  test_agent.py  test_backends.py  test_budget.py  test_build_site_data.py  test_c3.py  test_cli.py  test_crosslab.py  test_docker_preflight.py  test_imports.py  test_loader.py  test_make_client.py  test_models.py  test_novelty.py  test_openrouter_client.py  test_popularity.py  test_runner.py  test_sandbox.py  test_sandbox_runner.py  test_scoring.py  test_venvs.py
(+6 files in other folders)
